# cmake-sample

./: README.md
01-project/: CMakeLists.txt
02-message/: CMakeLists.txt
03-variable/: CMakeLists.txt  sample.c
04-set/: CMakeLists.txt
05-directory/: CMakeLists.txt
05-directory/.build/: CMakeCache.txt  Makefile  cmake_install.cmake  sample
05-directory/app/: sample.c
05-directory/include/: common.h
05-directory/src/: common.c
